IaC/backend/concilia_backend/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: concilia-backend
  labels:
    app: concilia-backend
    app.kubernetes.io/name: concilia-backend
    app.kubernetes.io/part-of: backend
    app.kubernetes.io/component: backend-api
spec:
  selector:
    app: concilia-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
